<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="50dp"
    tools:context=".ActivityHome">

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHome"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnInfoHumano"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/info_humano"
        android:backgroundTint="@color/bottoncolor"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnInfoMascota"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/info_mascota"
        android:backgroundTint="@color/bottoncolor"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnCitasMedicas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/citas_medicas"
        android:backgroundTint="@color/bottoncolor"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnVacunas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/vacunas"
        android:backgroundTint="@color/bottoncolor"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnMedicamentos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnMedicamentos"
        android:backgroundTint="@color/bottoncolor"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/bottoncolor2"
        android:text="@string/cerrar_sesion" />

</LinearLayout>
