<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddMascotaActivity">

    <TextView
        android:id="@+id/tvAddMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvAddMascota"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etNombreMascota"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/etNombreMascota"
        app:layout_constraintTop_toBottomOf="@+id/tvAddMascota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etTipoMascota"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/etTipoMascota"
        app:layout_constraintTop_toBottomOf="@+id/etNombreMascota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/etEdad"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/etTipoMascota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etRazaUp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/etRaza"
        app:layout_constraintTop_toBottomOf="@+id/etEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/etPeso"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/etRazaUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnSaveMascota"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="184dp"
        android:text="@string/btnSaveMascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />

</androidx.constraintlayout.widget.ConstraintLayout>
