<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCitaActivity">

    <TextView
        android:id="@+id/tvAddCita"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:layout_marginEnd="112dp"
        android:text="@string/tvAddCita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/tvPet"
        android:layout_width="297dp"
        android:layout_height="45dp"
        android:layout_marginEnd="96dp"
        android:text="@string/tvPet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/fecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <EditText
        android:id="@+id/etLugar"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/lugar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/etHora"
        android:layout_width="365dp"
        android:layout_height="61dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="344dp"
        android:layout_height="56dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Descripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <Button
        android:id="@+id/btnAddCita"
        android:layout_width="183dp"
        android:layout_height="51dp"
        android:layout_marginBottom="176dp"
        android:text="@string/btnAgendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>