<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Título como en el otro código -->
    <TextView
        android:id="@+id/tvInicio"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvInicio"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/etUsername"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInicio" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="368dp"
        android:layout_height="53dp"
        android:layout_marginTop="116dp"
        android:text="@string/btnIniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:backgroundTint="@color/bottoncolor"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/bottoncolor"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
