<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dataPetsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvDatosMascota"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/tvinfoMascota"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lvDataPets"
            android:layout_width="match_parent"
            android:layout_height="252dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="12dp">

            <Button
                android:id="@+id/btneditMascota"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/btneditMascota"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/btnAddMascota"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/btnAddMascota" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDeleteMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/btnDeleteMascota"
            android:backgroundTint="@color/bottoncolor2"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
